.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/Mass_Message_Manager__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Mass Message Manager</label>
</CustomObject>