.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/fields/Email_Leaves_Activity__c.field-meta.xml
<CustomField>
    <fullName>Email_Leaves_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Leaves Activity</label>
    <type>Checkbox</type>
</CustomField>