.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/fields/Enable_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Email</label>
    <type>Checkbox</type>
</CustomField>