.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/fields/Enable_SMS__c.field-meta.xml
<CustomField>
    <fullName>Enable_SMS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable SMS</label>
    <type>Checkbox</type>
</CustomField>