.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <defaultValue>&quot;test@gmail.com&quot;</defaultValue>
    <label>Reply To</label>
    <required>true</required>
    <type>Email</type>
</CustomField>