.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message_Manager__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <defaultValue>&quot;New Message&quot;</defaultValue>
    <label>Subject (Title)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>